--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,14 +3,15 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: scroll;
+	min-height: 100vh;
 }
 
 
 #__next {
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow: scroll;
 }
 
 div[data-overlay-container="true"] {
