--- a/src/css/global.css
+++ b/src/css/global.css
@@ -14,11 +14,7 @@ body, html {
 	overflow: scroll;
 }
 
-div[data-overlay-container="true"] {
-	height: 100% !important;
-}
-
-.blackoutBox {
+/* .blackoutBox {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -26,4 +22,4 @@ div[data-overlay-container="true"] {
 	height: 100%;
 	background-color: rgba(0, 0, 0, 1);
 	z-index: 99999;
-}
+} */
