--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,9 +1,10 @@
-body, html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: scroll;
+body,
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: scroll;
 	min-height: 100vh;
 }
 
@@ -26,4 +27,8 @@ body, html {
 
 * {
 	user-select: none;
+}
+
+ul>li.troubleshooting:not(:last-child) {
+	margin-bottom: 2rem !important;
 }
